@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/donor_id.R
-\name{donor_id}
-\alias{donor_id}
+\name{vireo}
+\alias{vireo}
 \title{Donor deconvolution of scRNA-seq data}
 \usage{
-donor_id(cell_data, donor_data = NULL, n_donor = NULL,
+vireo(cell_data, donor_data = NULL, n_donor = NULL,
   check_doublet = TRUE, n_init = NULL, n_vars_threshold = 10,
   singlet_threshold = 0.9, doublet_threshold = 0.9, verbose = FALSE,
   ...)
@@ -40,7 +40,7 @@ probability of doublet detection (must be in [0, 1]);}
 \item{verbose}{logical(1), should the function output verbose information
 while running?}
 
-\item{...}{arguments passed to \code{donor_id_VB}}
+\item{...}{arguments passed to \code{vireo_flock}}
 }
 \value{
 a list with elements: \code{logLik}, log-likelihood of the fitted
@@ -67,8 +67,8 @@ of variants (e.g. with the bcftools software) before applying them to this
 function.
 }
 \examples{
-ids <- donor_id(system.file("extdata", "cells.donorid.vcf.gz", package = "cardelino"),
-                system.file("extdata", "donors.donorid.vcf.gz", package = "cardelino"))
+ids <- vireo(system.file("extdata", "cells.donorid.vcf.gz", package = "cardelino"),
+             system.file("extdata", "donors.donorid.vcf.gz", package = "cardelino"))
 table(ids$assigned$donor_id)
 
 }
