@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/donor_id.R
-\name{run_VB}
-\alias{run_VB}
+\name{vireo_core}
+\alias{vireo_core}
 \title{Variational inference with a single run}
 \usage{
-run_VB(A, D, K = NULL, GT = NULL, GT_prior = NULL,
+vireo_core(A, D, K = NULL, GT = NULL, GT_prior = NULL,
   theta_prior = NULL, learn_theta = TRUE, check_doublet = TRUE,
   doublet_prior = NULL, check_doublet_iterative = FALSE,
   binary_GT = FALSE, min_iter = 20, max_iter = 200,
@@ -49,6 +49,6 @@ this may be not very accurate, especially for lowly expressed SNPs.
 Variational inference with a single run
 }
 \details{
-Users should typically use \code{\link{donor_id}} rather than this
+Users should typically use \code{\link{vireo}} rather than this
 lower-level function.
 }
