@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/donor_id.R
-\name{donor_id_VB}
-\alias{donor_id_VB}
+\name{vireo_flock}
+\alias{vireo_flock}
 \title{Variational inference for donor deconvolution with or without genotypes.}
 \usage{
-donor_id_VB(A, D, K = NULL, K_amplify = 1.5, GT = NULL,
+vireo_flock(A, D, K = NULL, K_amplify = 1.5, GT = NULL,
   GT_prior = NULL, n_init = NULL, n_proc = 4, random_seed = NULL,
   ...)
 }
@@ -22,7 +22,7 @@ complete.}
 
 \item{n_proc}{An integer. The number of processors to use.}
 
-\item{...}{arguments passed to \code{run_VB}}
+\item{...}{arguments passed to \code{vireo_core}}
 }
 \value{
 a list containing
@@ -40,12 +40,12 @@ this may be not very accurate, especially for lowly expressed SNPs.
 Variational inference for donor deconvolution with or without genotypes.
 }
 \details{
-Users should typically use \code{\link{donor_id}} rather than this
+Users should typically use \code{\link{vireo}} rather than this
 lower-level function.
 }
 \examples{
 data(example_donor)
-res <- donor_id_VB(A_clone, D_clone, GT = tree$Z[1:nrow(A_clone),])
+res <- vireo_flock(A_clone, D_clone, GT = tree$Z[1:nrow(A_clone),])
 head(res$prob)
 
 }
